--- a/rms-donation-manager/src/main/resources/static/persons.html
+++ b/rms-donation-manager/src/main/resources/static/persons.html
@@ -7,13 +7,17 @@
 		<div class="panel-body">
 			<form name="personSearch">
 				<div class="row">
-				<div class="form-group col-sm-6">
-					<label for="search" class="control-label">Search:</label> 
-					<input type="text" class="form-control" ng-model="searchValue" />
+					<div class="form-group col-sm-6">
+						<label for="search" class="control-label">Search:</label> 
+					</div>
 				</div>
-				<div class="form-group col-sm-6">
-					<a ng-click="setPage(1)" class="btn btn-small btn-primary">Search</a>
-				</div>
+				<div class="row">
+					<div class="form-group col-sm-6">
+						<input type="text" class="form-control" ng-model="searchValue" />
+					</div>
+					<div class="form-group col-sm-6">
+						<a ng-click="setPage(1)" class="btn btn-small btn-primary">Search</a>
+					</div>
 				</div>
 			</form>
 		</div>
