--- a/rms-donation-manager/src/main/resources/static/tickets.html
+++ b/rms-donation-manager/src/main/resources/static/tickets.html
@@ -46,7 +46,7 @@
 				<td><a ng-click="modifyTicket(t._links.self.href)">{{t.ticketNumber}}</a>
 				<td>{{t.buyer}}</td>
 				<td>{{t.soldBy}}</td>
-				<td> </td>
+				<td><a ng-click="deleteTicket(t._links.self.href)" class="btn btn-small btn-primary">delete</a></td>
 
 			</tr>
 		</tbody>
