#18 - cleaning UI to only show GUIs that we will be using.

--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -34,11 +34,11 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Home</a></li>
 					<li><a href="#!/persons">People</a></li>
-					<li><a href="#!/organizations">Organizations</a></li>
+					<!-- <li><a href="#!/organizations">Organizations</a></li>
 					<li><a href="#!/address">Addresses</a></li>
-					<li><a href="#!/donations">Donations</a></li>
+					<li><a href="#!/donations">Donations</a></li> -->
 					<li><a href="#!/tickets">Tickets</a></li>
-					<li><a href="#!/receipts">Receipts</a></li>
+					<!-- <li><a href="#!/receipts">Receipts</a></li> -->
 					<li><a href="#!/tables">Sitting Tables</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
