--- a/rms-donation-manager/src/main/resources/static/tickets.html
+++ b/rms-donation-manager/src/main/resources/static/tickets.html
@@ -36,7 +36,8 @@
 			<tr>
 				<th>Number</a></th>
 				<th>Bought By</th>
-				<th>Sold By</th>
+				<th>Paid</th>
+				<th>From of Payment</th>
 				<th><a href="#!/newticket">+ Ticket</a></th>
 			</tr>
 		</thead>
@@ -44,8 +45,9 @@
 			<tr
 				ng-repeat="t in tickets | filter: searchKeyword ">
 				<td><a ng-click="modifyTicket(t._links.self.href)">{{t.ticketNumber}}</a>
-				<td>{{t.buyer}}</td>
-				<td>{{t.soldBy}}</td>
+				<td>{{t.person.firstName}}</td>
+				<td><input type="checkbox" id="paid" class='form-group' ng-model="t.paid" ng-disabled="true"/></td>
+				<td>{{t.formOfPayment}}</td>
 				<td><a ng-click="deleteTicket(t._links.self.href)" class="btn btn-small btn-primary">delete</a></td>
 
 			</tr>
