#21 Sitting Table GUI added

--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -15,6 +15,8 @@
 <script src="scripts/organization.services.js"></script>
 <script src="scripts/ticket.services.js"></script>
 <script src="scripts/table.services.js"></script>
+<script src="scripts/table.controller.js"></script>
+<script src="scripts/new.table.controller.js"></script>
 <script src="scripts/pager.services.js"></script>
 <script src="scripts/price.services.js"></script>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
@@ -39,7 +41,7 @@
 					<li><a href="#!/donations">Donations</a></li> -->
 					<li><a href="#!/tickets">Tickets</a></li>
 					<!-- <li><a href="#!/receipts">Receipts</a></li> -->
-					<li><a href="#!/tables">Sitting Tables</a></li>
+					<li><a href="#!/sittingTables">Sitting Tables</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#"><span class="glyphicon glyphicon-user"></span>
