--- a/rms-donation-manager/src/main/resources/static/tickets.html
+++ b/rms-donation-manager/src/main/resources/static/tickets.html
@@ -45,7 +45,7 @@
 			<tr
 				ng-repeat="t in tickets | filter: searchKeyword ">
 				<td><a ng-click="modifyTicket(t._links.self.href)">{{t.ticketNumber}}</a>
-				<td>{{t.person.firstName}}</td>
+				<td>{{t.buyer}}</td>
 				<td><input type="checkbox" id="paid" class='form-group' ng-model="t.paid" ng-disabled="true"/></td>
 				<td>{{t.formOfPayment}}</td>
 				<td><a ng-click="deleteTicket(t._links.self.href)" class="btn btn-small btn-primary">delete</a></td>
