--- a/rms-donation-manager/src/main/resources/static/tables.html
+++ b/rms-donation-manager/src/main/resources/static/tables.html
@@ -34,7 +34,7 @@
 	<table class="table table-striped">
 		<thead>
 			<tr>
-				<th>Number</a></th>
+				<th>Table Number</a></th>
 				<th>Name</th>
 				<th>People per Table</th>
 				<th>People in Table</th>
