--- a/rms-donation-manager/src/main/resources/static/table.html
+++ b/rms-donation-manager/src/main/resources/static/table.html
@@ -52,7 +52,7 @@
 							<tr class="form-group" ng-form="linkedTicketsForm" ng-repeat="t in tickets">
 								<ng-form name="linkedTicketsForm">
 									<td>{{t.ticketNumber}}</a>
-									<td>{{t.person.firstName}}</td>
+									<td>{{t.buyer}}</td>
 									<td><input type="checkbox" id="paid" class='form-group' ng-model="t.paid" ng-disabled="true"/></td>
 									<td>{{t.formOfPayment}}</td>
 									<td><a ng-click="unlinkTicket(t._links.self.href)" class="btn btn-small btn-primary">unlink</a></td>
