--- a/rms-donation-manager/src/main/resources/static/tables.html
+++ b/rms-donation-manager/src/main/resources/static/tables.html
@@ -36,7 +36,9 @@
 			<tr>
 				<th>Table Number</a></th>
 				<th>Name</th>
-				<th>People in Table</th>
+				<th>Event</th>
+				<th># of Tickets in Table</th>
+				<th># of People in Table 
 				<th>year</th>
 				<th><a href="#!/newsittingTable">+ Table</a></th>
 			</tr>
@@ -46,7 +48,9 @@
 				ng-repeat="t in tables | filter: searchKeyword ">
 				<td><a ng-click="modifyTable(t._links.self.href)">{{t.number}}</a>
 				<td>{{t.name}}</td>
+				<td>{{t.event}}</td>
 				<td>{{t.peopleInTable}}/{{t.peoplePerTable}}</td>
+				<td>{{t.peoplePerTable}}</td>
 				<td>{{t.year}}</td>
 				<td><a ng-click="deleteTable(t._links.self.href)" class="btn btn-small btn-primary">delete</a></td>
 			</tr>
