#18 - closing the table header tag

--- a/rms-donation-manager/src/main/resources/static/tables.html
+++ b/rms-donation-manager/src/main/resources/static/tables.html
@@ -38,7 +38,7 @@
 				<th>Name</th>
 				<th>Event</th>
 				<th># of Tickets in Table</th>
-				<th># of People in Table 
+				<th># of People in Table</th>
 				<th>year</th>
 				<th><a href="#!/newsittingTable">+ Table</a></th>
 			</tr>
