--- a/rms-donation-manager/src/main/resources/static/tickets.html
+++ b/rms-donation-manager/src/main/resources/static/tickets.html
@@ -36,8 +36,10 @@
 			<tr>
 				<th>Ticket Number</a></th>
 				<th>Bought By</th>
+				<th>Event</th>
 				<th>Table</th>
 				<th>Paid</th>
+				<th>Is At Event</th>
 				<th>From of Payment</th>
 				<th><a href="#!/newticket">+ Ticket</a></th>
 			</tr>
@@ -47,8 +49,10 @@
 				ng-repeat="t in tickets | filter: searchKeyword ">
 				<td><a ng-click="modifyTicket(t._links.self.href)">{{t.ticketNumber}}</a>
 				<td>{{t.buyer}}</td>
+				<td>{{t.event}}</td>
 				<td>{{t.number}}</td>
 				<td><input type="checkbox" id="paid" class='form-group' ng-model="t.paid" ng-disabled="true"/></td>
+				<td><input type="checkbox" id="atEvent" class='form-group' ng-model="t.isAtEvent" ng-disabled="true"/></td>
 				<td>{{t.formOfPayment}}</td>
 				<td><a ng-click="deleteTicket(t._links.self.href)" class="btn btn-small btn-primary">delete</a></td>
 
