#18 - Adding event linker to sitting table (incomplete)

--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -19,6 +19,7 @@
 <script src="scripts/new.table.controller.js"></script>
 <script src="scripts/pager.services.js"></script>
 <script src="scripts/price.services.js"></script>
+<script src="scripts/event.services.js"></script>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 </head>
 <body>
