#18 - added atEvent in Ticket Finder UI

--- a/rms-donation-manager/src/main/resources/static/tickets.html
+++ b/rms-donation-manager/src/main/resources/static/tickets.html
@@ -52,7 +52,7 @@
 				<td>{{t.event}}</td>
 				<td>{{t.number}}</td>
 				<td><input type="checkbox" id="paid" class='form-group' ng-model="t.paid" ng-disabled="true"/></td>
-				<td><input type="checkbox" id="atEvent" class='form-group' ng-model="t.isAtEvent" ng-disabled="true"/></td>
+				<td><input type="checkbox" id="atEvent" class='form-group' ng-model="t.atEvent" ng-disabled="true"/></td>
 				<td>{{t.formOfPayment}}</td>
 				<td><a ng-click="deleteTicket(t._links.self.href)" class="btn btn-small btn-primary">delete</a></td>
 
